[package]
name = "github-info-bot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
github-flows = "0.5.2"
slack-flows = "0.3.4"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
serde_json = "1"
dotenv = "0.15.0"
serde = { version = "1.0.163", features = ["derive"] }
openai-flows = "0.8.5"
